fixed spacing

--- a/main.css
+++ b/main.css
@@ -84,7 +84,12 @@ body{
   width: 100%;
   max-width: 600px;
   max-height: 450px;
+  margin-left: 30%;
   height: 100%;
+}
+
+h3{
+  margin-left:0.4%
 }
  
  
